--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -31,7 +31,7 @@ header ul:after {
   padding-bottom: 15%;
   width: 100%;
   background-size: cover;
-  background-image: url("header.jpg");
+  background-image: url("170224(micky.jpg");
   background-attachment: fixed;
 }
 
@@ -46,12 +46,6 @@ header ul:after {
   background-color: white;
   color: #333;
   padding: 80px;
-}
-
-.function {
-  background-color: #e9e9e9;
-  padding: 80px;
-  padding-bottom: 185px;
 }
 
 footer {
