--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  background-color: #2c3e50;
+  background-color: #87CEFA;
   height: 54px;
 }
 
@@ -50,7 +50,7 @@ header ul:after {
 
 footer {
   width: 100%;
-  background-color:#2c3e50;
+  background-color:#87CEFA;
   padding: 20px 0 10px 0;
   color: white;
   margin: auto;
