--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -15,6 +15,31 @@ input[type="submit"].btn-block{
   margin: 15px 0;
 }
 
+.tws img {
+  width: 10%;
+}
+
+.bubble {
+  position: relative;
+}
+
+.bubble .body {
+  background-color: #F0F8FF;
+}
+
+.bubble .tail {
+  margin-left: -12px;
+  border-right: 12px solid transparent; 
+  border-bottom: 18px solid  #F0F8FF;
+  border-left: 12px solid transparent; 
+  position: absolute;
+  top: -18px;
+  left: 10%;
+  width: 0; 
+  height: 0; 
+}
+
+
 .container{
   padding-bottom: 85px;
 }
