--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@tweet, url: choose_new_or_edit) do |f| %>
   <% if @tweet.errors.any? %>
     <div id="error_explanation">
-      <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
+      <h2><%= @tweet.errors.count %>件のエラーがるよ。ﾊﾊｯ</h2>
 
       <ul>
       <% @tweet.errors.full_messages.each do |msg| %>
